# NaaVRE-containerizer-service

./: .gitignore  .pre-commit-config.yaml  README.md  configuration.json  dev.env  environment.yaml  pyproject.toml  requirements.txt  setup-tests-temp.sh  setup.cfg  values-deploy-naavre-containerizer-service-minikube-github-secret.yaml  values-deploy-naavre-containerizer-service-minikube-github-secrets.yaml  values-deploy-naavre-containerizer-service-minikube-github.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_template.md
.github/workflows/: add-issue-to-projects-overview.yaml  build-container.yml  collect-tests.yml  gen-config.yml  gen-tests-reference.yml  helm-chart-release.yml  helm-chart-relese.yml  lint.yml  make.yml  run-tests.yml
app/: __init__.py  main.py  settings.py
app/models/: cell.py  containerizer_payload.py  extractor_payload.py  j_cell.py  notebook.py  notebook_cell.py  notebook_data.py  vl_config.py  workflow_cell.py
app/services/: base_image_tags.py
app/settings/: service_settings.py
app/templates/: R_cell_template.jinja2  conda_env_template.jinja2  dockerfile_template_conda.jinja2  py_cell_template.jinja2  vis_cell_template.jinja2  workflow_template_v2.jinja2
app/test/: test_main.py
app/tests/: conftest.py  test_containerize.py  test_extract_cell.py  test_get_base_image_tags.py  test_main.py  test_race_conditions.py
app/utils/: openid.py  sanity_checker.py
docker/: Dockerfile  dev.Dockerfile
minikube_tests/: setup-tests-local.sh  values-deploy-naavre-containerizer-service-minikube-github.yaml
(+292 files in other folders)
