[project]
name = "NaaVRE-containerizer-service"
version = "0.1"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.0"
requests= "2.32.3"
uvicorn="0.30.6"
pydantic = "2.9.2"
Jinja2 = "3.1.4"
autopep8 = "2.3.1"
python-slugify = "8.0.4"
distro = "1.9.0"
gitpython = "3.1.43"
PyGitHub = "2.4.0"
httpx = "0.27.2"


[tool.poetry.dev-dependencies]
pytest = "8.3.3"
pre-commit = "3.8.0"

[tool.poetry.group.dev.dependencies]
pyproject-pre-commit = "^0.2.4"

[build-system]
requires = [
    "poetry-core>=1.9.0"
]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "NaaVRE-containerizer-service"
version = "0.1"
description = "Conteniazies cell from jupyter notebooks"
authors = ["S. Koulouzis, G. Pelouze"]
license = "Apache-2.0"
readme = "README.md"